# participant-crd

./: Cargo.toml  Dockerfile  README.md  deploy.yaml  participant-crd.yaml  participant.yaml  rust.nix
.github/workflows/: publish_docker.yml
src/: main.rs
