[package]
name = "participant-crd"
version = "0.1.0"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
kube-runtime = "0.48"
kube-derive = "0.48"
kube = "0.48"
snafu = "0.6"
futures = "0.3"

# TODO: is this really the way to set features for a lib that we transitively depend on?
[dependencies.k8s-openapi]
features = ["v1_17"]
version = "0.11.0"
